fix gaps between images

--- a/packages/client/src/styles/reset.css
+++ b/packages/client/src/styles/reset.css
@@ -45,6 +45,8 @@ summary {
 img {
   max-inline-size: 100%;
   max-block-size: 100%;
+  /* to avoid the gap created by a space char between inline elements */
+  vertical-align: bottom;
 }
 
 /* removes spacing between cells in tables */
